feat: 멀티 테넌트 구현

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=multi-tenancy
+spring.h2.console.enabled=true
+spring.jpa.hibernate.ddl-auto=none
+spring.sql.init.mode=always
